--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT-Labs</title>
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,300;0,400;1,400;1,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <nav class="nav">
+        <img title="IT-Labs" src="img/logo.png" alt="IT-Labs Logo" class="nav__logo">
 
-    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <div class="search">
+            <input type="text">
+        </div>
+
+        <div id="menu-toggle" class="nav__button">
+            <div id="line-1" class="nav__burger"></div>
+            <div id="line-2" class="nav__burger"></div>
+            <div id="line-3" class="nav__burger"></div>
+        </div>
+
+        <ul id="menu" class="nav__menu">
+            <li class="nav__item"><a href="#" class="nav__link">Despre IT-Labs</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Cursuri</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Ghidul Cursantului</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Blog</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Log in</a></li>
+        </ul>
+    </nav>
+    <header class="header">
+
+    </header>
 </body>
 </html>
