--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,11 @@
     <nav class="nav">
         <img title="IT-Labs" src="img/logo.png" alt="IT-Labs Logo" class="nav__logo">
 
-        <div class="search">
-            <input type="text">
-        </div>
+        <form class="search" action="" method="get">
+            <input type="text" name="query" id="">
+        </form>
 
-        <div id="menu-toggle" class="nav__button">
+        <div class="nav__button">
             <div id="line-1" class="nav__burger"></div>
             <div id="line-2" class="nav__burger"></div>
             <div id="line-3" class="nav__burger"></div>
@@ -26,7 +26,7 @@
             <li class="nav__item"><a href="#" class="nav__link">Cursuri</a></li>
             <li class="nav__item"><a href="#" class="nav__link">Ghidul Cursantului</a></li>
             <li class="nav__item"><a href="#" class="nav__link">Blog</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">Log in</a></li>
+            <li class="nav__item"><a href="#" class="nav__link nav__link--btn">Log in</a></li>
         </ul>
     </nav>
     <header class="header">
