Added search and minor tweaks

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
         <img title="IT-Labs" src="img/logo.png" alt="IT-Labs Logo" class="nav__logo">
 
         <form class="search" action="" method="get">
-            <input type="text" name="query" id="">
+            <div class="search__before"><span>Search</span>{</span></div>
+            <input class="search__input" placeholder="..." type="text" name="query" id="">
+            <div class="search__after">}</div>
         </form>
 
         <div class="nav__button">
