Created header for homepage

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT-Labs</title>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,300;0,400;1,400;1,800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,300;0,400;0,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -32,7 +32,18 @@
         </ul>
     </nav>
     <header class="header">
-
+        <div class="row">
+            <div class="grid">
+                <div class="grid__6">
+                    <span class="span span--main">A goal without a plan is just a wish</span>
+                    <h1 class="heading-primary heading-primary--main">Cariera ta în <span>IT</span>.</h1>
+                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam animi qui voluptates id iste. Dignissimos natus repudiandae exercitationem architecto. Illo vitae harum ex corrupti, modi sapiente cumque eius. Recusandae, laborum?</p>
+                </div>
+                <div class="grid__6">
+                    <img class="header__img" src="img/circuits2.png" alt="">
+                </div>
+            </div>
+        </div>
     </header>
 </body>
 </html>
