--- a/src/index.html
+++ b/src/index.html
@@ -45,5 +45,33 @@
             </div>
         </div>
     </header>
+
+    <section class="color-section--grey-light u-vpadding">
+        <div class="row">
+            <h2 class="heading-secondary">Secondary heading</h2>
+        </div>
+        <div class="row">
+            <div class="grid">
+                <div class="grid__4 grid-item">
+                    <div class="grid-item__circle"></div>
+                    <div class="grid-item__text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.
+                    </div>
+                </div>
+                <div class="grid__4 grid-item">
+                    <div class="grid-item__circle"></div>
+                    <div class="grid-item__text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.
+                    </div>
+                </div>
+                <div class="grid__4 grid-item">
+                    <div class="grid-item__circle"></div>
+                    <div class="grid-item__text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
