Secondary heading, grid-item changes, grid row spacing

--- a/src/index.html
+++ b/src/index.html
@@ -53,21 +53,65 @@
         <div class="row">
             <div class="grid">
                 <div class="grid__4 grid-item">
-                    <div class="grid-item__circle"></div>
+                    <div class="grid-item__circle grid-item__circle--1"></div>
                     <div class="grid-item__text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.</p>
                     </div>
                 </div>
                 <div class="grid__4 grid-item">
-                    <div class="grid-item__circle"></div>
+                    <div class="grid-item__circle grid-item__circle--2"></div>
                     <div class="grid-item__text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.</p>
                     </div>
                 </div>
                 <div class="grid__4 grid-item">
-                    <div class="grid-item__circle"></div>
+                    <div class="grid-item__circle grid-item__circle--3"></div>
                     <div class="grid-item__text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="grid">
+                <div class="grid__4 grid-item">
+                    <div class="grid-item__circle grid-item__circle--2"></div>
+                    <div class="grid-item__text">
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.</p>
+                    </div>
+                </div>
+                <div class="grid__4 grid-item">
+                    <div class="grid-item__circle grid-item__circle--3"></div>
+                    <div class="grid-item__text">
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.</p>
+                    </div>
+                </div>
+                <div class="grid__4 grid-item">
+                    <div class="grid-item__circle grid-item__circle--1"></div>
+                    <div class="grid-item__text">
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="grid">
+                <div class="grid__4 grid-item">
+                    <div class="grid-item__circle grid-item__circle--3"></div>
+                    <div class="grid-item__text">
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.</p>
+                    </div>
+                </div>
+                <div class="grid__4 grid-item">
+                    <div class="grid-item__circle grid-item__circle--2"></div>
+                    <div class="grid-item__text">
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.</p>
+                    </div>
+                </div>
+                <div class="grid__4 grid-item">
+                    <div class="grid-item__circle grid-item__circle--1"></div>
+                    <div class="grid-item__text">
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.</p>
                     </div>
                 </div>
             </div>
