Updated typography with headings, restructuring and responsive ajustments

--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,15 @@
         <img title="IT-Labs" src="img/logo.png" alt="IT-Labs Logo" class="nav__logo">
 
         <form class="search" action="" method="get">
-            <div class="search__before"><span>Search</span>{</span></div>
+            <div class="search__before"><span>Search</span>{</div>
             <input class="search__input" placeholder="..." type="text" name="query" id="">
             <div class="search__after">}</div>
         </form>
 
         <div class="nav__button">
-            <div id="line-1" class="nav__burger"></div>
-            <div id="line-2" class="nav__burger"></div>
-            <div id="line-3" class="nav__burger"></div>
+            <div class="nav__burger"></div>
+            <div class="nav__burger"></div>
+            <div class="nav__burger"></div>
         </div>
 
         <ul id="menu" class="nav__menu">
@@ -31,6 +31,7 @@
             <li class="nav__item"><a href="#" class="nav__link nav__link--btn">Log in</a></li>
         </ul>
     </nav>
+
     <header class="header">
         <div class="row">
             <div class="grid">
@@ -48,7 +49,7 @@
 
     <section class="color-section--grey-light u-vpadding">
         <div class="row">
-            <h2 class="heading-secondary">Secondary heading</h2>
+            <h2 class="heading-secondary heading-secondary--grey-dark">Secondary heading</h2>
         </div>
         <div class="row">
             <div class="grid">
