--- a/src/index.html
+++ b/src/index.html
@@ -23,12 +23,49 @@
             <div class="nav__burger"></div>
         </div>
 
-        <ul id="menu" class="nav__menu">
-            <li class="nav__item"><a href="#" class="nav__link">Despre IT-Labs</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">Cursuri</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">Ghidul Cursantului</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">Blog</a></li>
-            <li class="nav__item"><a href="#" class="nav__link nav__link--btn">Log in</a></li>
+        <ul class="nav__menu">
+            <li class="nav__item">
+                <a href="#" class="nav__link">Despre IT-Labs</a>
+                <ul class="nav__sub-menu">
+                    <li class="nav__sub-item"><a href="#" class="nav__sub-link">Echipa</a></li>
+                    <li class="nav__sub-item"><a href="#" class="nav__sub-link">Certificari</a></li>
+                    <li class="nav__sub-item"><a href="#" class="nav__sub-link">Business</a></li>
+                    <li class="nav__sub-item"><a href="#" class="nav__sub-link">Contact</a></li>
+                    <li class="nav__sub-item"><a href="#" class="nav__sub-link">Ecosistemul IT-Labs</a></li>
+                    <li class="nav__sub-item"><a href="#" class="nav__sub-link">Parteneriate</a></li>
+                </ul>
+            </li>
+            <li class="nav__item">
+                <a href="#" class="nav__link">Cursuri</a>
+                <ul class="nav__sub-menu">
+                    <li class="nav__sub-item"><a href="#" class="nav__sub-link">Python</a></li>
+                    <li class="nav__sub-item"><a href="#" class="nav__sub-link">Java</a></li>
+                    <li class="nav__sub-item"><a href="#" class="nav__sub-link">C/C++</a></li>
+                    <li class="nav__sub-item"><a href="#" class="nav__sub-link">Web Design</a></li>
+                    <li class="nav__sub-item"><a href="#" class="nav__sub-link">Testare Software</a></li>
+                </ul>
+            </li>
+            <li class="nav__item">
+                <a href="#" class="nav__link">Ghidul Cursantului</a>
+                <ul class="nav__sub-menu">
+                    <li class="nav__sub-item"><a href="#" class="nav__sub-link">FAQ</a></li>
+                    <li class="nav__sub-item"><a href="#" class="nav__sub-link">Selectia cursantilor</a></li>
+                    <li class="nav__sub-item"><a href="#" class="nav__sub-link">Mentori</a></li>
+                    <li class="nav__sub-item"><a href="#" class="nav__sub-link">HR Speed Dating</a></li>
+                    <li class="nav__sub-item"><a href="#" class="nav__sub-link">Dezvoltare personala</a></li>
+                    <li class="nav__sub-item"><a href="#" class="nav__sub-link">Dexter Lab</a></li>
+                    <li class="nav__sub-item"><a href="#" class="nav__sub-link">Testimoniale</a></li>
+                    <li class="nav__sub-item"><a href="#" class="nav__sub-link">Live classroom</a></li>
+                    <li class="nav__sub-item"><a href="#" class="nav__sub-link">Training tools</a></li>
+                    <li class="nav__sub-item"><a href="#" class="nav__sub-link">Mentorat</a></li>
+                </ul>
+            </li>
+            <li class="nav__item">
+                <a href="#" class="nav__link">Blog</a>
+            </li>
+            <li class="nav__item">
+                <a href="#" class="nav__link nav__link--btn">Log in</a>
+            </li>
         </ul>
     </nav>
 
