Design ajustment for grid

--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
         </div>
     </header>
 
-    <section class="color-section--grey-light u-vpadding">
+    <section class="features color-section--grey-light u-vpadding">
         <div class="row">
             <h2 class="heading-secondary heading-secondary--grey-dark">Secondary heading</h2>
         </div>
