Just added a sexy footer

--- a/src/index.html
+++ b/src/index.html
@@ -240,5 +240,136 @@
         </div>
     </section>
 
+    <footer class="footer">
+        <div class="row">
+            
+            <div class="grid">
+                <div class="grid__3">
+                    <img src="img/logo_white.png" alt="IT-Labs white and black logo" class="footer__logo">
+                </div>
+                <div class="grid__9 footer__heading">
+                        IT LABS este o comunitate si un ansamblu de resurse pentru devenirea ta ca programator.
+                </div>
+            </div>
+
+            <div class="grid">
+                <div class="grid__3 footer__filler"></div>
+
+                <div class="grid__3 footer__list">
+                    <div class="footer__title">Contact</div>
+
+                    <div class="footer__icon-box">
+                        <svg class="footer__icon">
+                            <use xlink:href="img/sprite.svg#icon-map2"></use>
+                        </svg>
+                        <div class="footer__text">Str. Budai Deleanu nr. 13, Timișoara, România</div>
+                    </div>
+
+                    <div class="footer__icon-box">
+                        <svg class="footer__icon">
+                            <use xlink:href="img/sprite.svg#icon-phone"></use>
+                        </svg>
+                        <div class="footer__text">+40 728 433 466</div>
+                    </div>
+
+                    <div class="footer__icon-box">
+                        <svg class="footer__icon">
+                            <use xlink:href="img/sprite.svg#icon-phone"></use>
+                        </svg>
+                        <div class="footer__text">+40 356 800 009</div>
+                    </div>
+                    <div class="footer__icon-box">
+                        <svg class="footer__icon">
+                            <use xlink:href="img/sprite.svg#icon-mail-envelope-closed"></use>
+                        </svg>
+                        <div class="footer__text">contact@it-labs.ro</div>
+                    </div>
+                </div>
+
+                <div class="grid__3 footer__list">
+                    <div class="footer__title">Links</div>
+
+                    <div class="footer__icon-box">
+                        <svg class="footer__icon">
+                            <use xlink:href="img/sprite.svg#icon-embed2"></use>
+                        </svg>
+                        <a href="https://www.it-labs.ro" class="footer__link">IT Labs</a>
+                    </div>
+
+                    <div class="footer__icon-box">
+                        <svg class="footer__icon">
+                            <use xlink:href="img/sprite.svg#icon-embed2"></use>
+                        </svg>
+                        <a href="https://www.javabootcamp.net" class="footer__link">Java bootcamp</a>
+                    </div>
+
+                    <div class="footer__icon-box">
+                        <svg class="footer__icon">
+                            <use xlink:href="img/sprite.svg#icon-embed2"></use>
+                        </svg>
+                        <a href="https://python-bootcamp.net" class="footer__link">Python bootcamp</a>
+                    </div>
+                    <div class="footer__icon-box">
+                        <svg class="footer__icon">
+                            <use xlink:href="img/sprite.svg#icon-embed2"></use>
+                        </svg>
+                        <a href="https://cplusplus4.me" class="footer__link">C/C++ for me</a>
+                    </div>
+                    <div class="footer__icon-box">
+                        <svg class="footer__icon">
+                            <use xlink:href="img/sprite.svg#icon-embed2"></use>
+                        </svg>
+                        <a href="https://www.web-bootcamp.net" class="footer__link">Web bootcamp ?</a>
+                    </div>
+                    <div class="footer__icon-box">
+                        <svg class="footer__icon">
+                            <use xlink:href="img/sprite.svg#icon-embed2"></use>
+                        </svg>
+                        <a href="https://www.software-skills4.me" class="footer__link">Software skills for me</a>
+                    </div>
+                </div>
+
+                <div class="grid__3 footer__list">
+                    <div class="footer__title">Media</div>
+
+                    <div class="footer__icon-box">
+                        <svg class="footer__icon">
+                            <use xlink:href="img/sprite.svg#icon-facebook"></use>
+                        </svg>
+                        <a href="#" class="footer__link">Facebook</a>
+                    </div>
+
+                    <div class="footer__icon-box">
+                        <svg class="footer__icon">
+                            <use xlink:href="img/sprite.svg#icon-linkedin2"></use>
+                        </svg>
+                        <a href="#" class="footer__link">Linked in</a>
+                    </div>
+
+                    <div class="footer__icon-box">
+                        <svg class="footer__icon">
+                            <use xlink:href="img/sprite.svg#icon-whatsapp"></use>
+                        </svg>
+                        <a href="#" class="footer__link">Whatsapp</a>
+                    </div>
+                    <div class="footer__icon-box">
+                        <svg class="footer__icon">
+                            <use xlink:href="img/sprite.svg#icon-twitter"></use>
+                        </svg>
+                        <a href="#" class="footer__link">Twitter</a>
+                    </div>
+                </div>
+
+            </div><!--END GRID-->
+
+            <div class="grid">
+                <div class="grid__3 footer__filler"></div>
+                <div class="grid__9 footer__legal">
+                    Copyright IT Labs &copy; 2020 | Toate drepturile rezervate.
+                </div>
+            </div>
+        </div><!--END ROW-->
+    </footer>
+
 </body>
 </html>
