Changed footer structure and added newsletter

--- a/src/index.html
+++ b/src/index.html
@@ -364,6 +364,18 @@
 
             <div class="grid">
                 <div class="grid__3 footer__filler"></div>
+                <div class="grid__6 footer__list">
+                    <div class="footer__title">Newsletter</div>
+                    <from class="footer__newsletter">
+                        <input type="email" class="footer__input">
+                        <input type="submit" value="Subscribe" class="footer__submit">
+                    </from>
+                    <div class="footer__text">Veti primi mailuri legate de activitatile noi ...</div>
+                </div>
+            </div>
+
+            <div class="grid">
+                <div class="grid__3 footer__filler"></div>
                 <div class="grid__9 footer__legal">
                     Copyright IT Labs &copy; 2020 | Toate drepturile rezervate.
                 </div>
