Added icon to grid-item

--- a/src/index.html
+++ b/src/index.html
@@ -90,40 +90,31 @@
 
             <div class="grid">
                 <div class="grid__4 grid-item">
-                    <div class="grid-item__circle grid-item__circle--1"></div>
+                    <div class="grid-item__circle grid-item__circle--1">
+                        <svg class="grid-item__icon">
+                            <use xlink:href="img/sprite.svg#icon-embed2"></use>
+                        </svg>
+                    </div>
                     <div class="grid-item__text">
                         <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.</p>
                     </div>
                 </div>
                 <div class="grid__4 grid-item">
-                    <div class="grid-item__circle grid-item__circle--2"></div>
+                    <div class="grid-item__circle grid-item__circle--2">
+                        <svg class="grid-item__icon">
+                            <use xlink:href="img/sprite.svg#icon-embed2"></use>
+                        </svg>
+                    </div>
                     <div class="grid-item__text">
                         <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.</p>
                     </div>
                 </div>
                 <div class="grid__4 grid-item">
-                    <div class="grid-item__circle grid-item__circle--3"></div>
-                    <div class="grid-item__text">
-                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.</p>
+                    <div class="grid-item__circle grid-item__circle--3">
+                        <svg class="grid-item__icon">
+                            <use xlink:href="img/sprite.svg#icon-embed2"></use>
+                        </svg>
                     </div>
-                </div>
-            </div>
-
-            <div class="grid">
-                <div class="grid__4 grid-item">
-                    <div class="grid-item__circle grid-item__circle--2"></div>
-                    <div class="grid-item__text">
-                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.</p>
-                    </div>
-                </div>
-                <div class="grid__4 grid-item">
-                    <div class="grid-item__circle grid-item__circle--3"></div>
-                    <div class="grid-item__text">
-                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.</p>
-                    </div>
-                </div>
-                <div class="grid__4 grid-item">
-                    <div class="grid-item__circle grid-item__circle--1"></div>
                     <div class="grid-item__text">
                         <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.</p>
                     </div>
@@ -132,19 +123,64 @@
 
             <div class="grid">
                 <div class="grid__4 grid-item">
-                    <div class="grid-item__circle grid-item__circle--3"></div>
+                    <div class="grid-item__circle grid-item__circle--2">
+                        <svg class="grid-item__icon">
+                            <use xlink:href="img/sprite.svg#icon-embed2"></use>
+                        </svg>
+                    </div>
                     <div class="grid-item__text">
                         <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.</p>
                     </div>
                 </div>
                 <div class="grid__4 grid-item">
-                    <div class="grid-item__circle grid-item__circle--1"></div>
+                    <div class="grid-item__circle grid-item__circle--3">
+                        <svg class="grid-item__icon">
+                            <use xlink:href="img/sprite.svg#icon-embed2"></use>
+                        </svg>
+                    </div>
                     <div class="grid-item__text">
                         <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.</p>
                     </div>
                 </div>
                 <div class="grid__4 grid-item">
-                    <div class="grid-item__circle grid-item__circle--2"></div>
+                    <div class="grid-item__circle grid-item__circle--1">
+                        <svg class="grid-item__icon">
+                            <use xlink:href="img/sprite.svg#icon-embed2"></use>
+                        </svg>
+                    </div>
+                    <div class="grid-item__text">
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="grid">
+                <div class="grid__4 grid-item">
+                    <div class="grid-item__circle grid-item__circle--3">
+                        <svg class="grid-item__icon">
+                            <use xlink:href="img/sprite.svg#icon-embed2"></use>
+                        </svg>
+                    </div>
+                    <div class="grid-item__text">
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.</p>
+                    </div>
+                </div>
+                <div class="grid__4 grid-item">
+                    <div class="grid-item__circle grid-item__circle--1">
+                        <svg class="grid-item__icon">
+                            <use xlink:href="img/sprite.svg#icon-embed2"></use>
+                        </svg>
+                    </div>
+                    <div class="grid-item__text">
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.</p>
+                    </div>
+                </div>
+                <div class="grid__4 grid-item">
+                    <div class="grid-item__circle grid-item__circle--2">
+                        <svg class="grid-item__icon">
+                            <use xlink:href="img/sprite.svg#icon-embed2"></use>
+                        </svg>
+                    </div>
                     <div class="grid-item__text">
                         <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum deserunt placeat veritatis vero, odio, perferendis sed dignissimos exercitationem ratione eaque.</p>
                     </div>
