Implelemted circuits project with additional features and restructuring

--- a/src/index.html
+++ b/src/index.html
@@ -453,6 +453,25 @@
         </div>
     </section>
 
+
+    <!-- Implementation of circuit component -->
+    <section id="circuit0" class="circuit">
+
+        <div class="circuit__background"></div>
+
+        <!-- canvas sibling that will be under the content -->
+        <canvas class="circuit__canvas"></canvas>
+
+        <!-- This wraps everything -->
+        <div class="circuit__overlay u-flex u-flex-align-center u-flex-justify-center">
+            
+            <img class="responsive" style="max-width: 500px;" src="img/logo.png" alt="Logo IT-Labs">
+
+        </div>
+    </section>
+
+
+
     <footer class="footer">
         <div class="row">
             
