Created basic loader

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,10 @@
 </head>
 
 <body>
+    <div class="loader">
+        <img title="IT-Labs" src="img/logo.png" alt="IT-Labs Logo">
+    </div>
+
     <nav class="nav">
         <!-- LOGO -->
         <img title="IT-Labs" src="img/logo.png" alt="IT-Labs Logo" class="nav__logo">
