Crated the youtube video component

--- a/src/index.html
+++ b/src/index.html
@@ -576,6 +576,32 @@
     </section>
 
 
+    <section class="u-vpadding">
+        <div class="row">
+            
+            <div class="yt-item">
+                <div class="yt-item__video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Mw7uxQkeO1M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="yt-item__container">
+                    <div class="yt-item__title">BOBOCEA CĂTALIN</div>
+                    <div class="yt-item__description">STUDENT, FACULTATEA DE MATEMATICĂ-INFORMATICĂ, TIMIȘOARA</div>
+                </div>
+            </div>
+
+            <div class="yt-item">
+                <div class="yt-item__video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Mw7uxQkeO1M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="yt-item__container">
+                    <div class="yt-item__title">BOBOCEA CĂTALIN</div>
+                    <div class="yt-item__description">STUDENT, FACULTATEA DE MATEMATICĂ-INFORMATICĂ, TIMIȘOARA</div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
 
     <footer class="footer">
         <div class="row">
