--- a/src/index.html
+++ b/src/index.html
@@ -123,15 +123,17 @@
     <header class="header">
         <div class="row">
             <div class="grid">
+                
                 <div class="grid__6">
-                    <span class="span span--main">A goal without a plan is just a wish</span>
-                    <h1 class="heading-primary heading-primary--main">Cariera ta în <span>IT</span>.</h1>
+                    <!-- <span class="span span--main">A goal without a plan is just a wish</span> -->
+                    <!-- <h1 class="heading-primary heading-primary--main">Cariera ta în <span>IT</span>.</h1> -->
+                    <h1 class="heading-primary heading-primary--main">Laboratorul tau de <span>cariera</span></h1>
                     <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam animi qui
                         voluptates id iste. Dignissimos natus repudiandae exercitationem architecto. Illo vitae harum ex
                         corrupti, modi sapiente cumque eius. Recusandae, laborum?</p>
                 </div>
                 <div class="grid__6">
-                    <img class="header__img" src="img/circuits2.png" alt="">
+                    <img class="header__img" src="img/ilustr_crop.png" alt="">
                 </div>
             </div>
         </div>
@@ -602,6 +604,29 @@
         </div>
     </section>
 
+
+    <section class="splide splide-full">
+        <div class="splide__track">
+            <ul class="splide__list">
+
+                <li class="splide__slide">
+                    <!-- Course component -->
+                    <img src="img/course_resize.jpg" alt="" class="responsive">
+                    <!-- END Course component -->
+                </li>
+                <li class="splide__slide">
+                    <!-- Course component -->
+                    <img src="img/course_resize.jpg" alt="" class="responsive">
+                    <!-- END Course component -->
+                </li>
+                <li class="splide__slide">
+                    <!-- Course component -->
+                    <img src="img/course_resize.jpg" alt="" class="responsive">
+                    <!-- END Course component -->
+                </li>
+            </ul>
+        </div>
+    </section>
 
     <footer class="footer">
         <div class="row">
