added gdpr, cookies, js handlers

--- a/src/index.html
+++ b/src/index.html
@@ -766,12 +766,21 @@
             <div class="grid">
                 <div class="grid__3 footer__filler"></div>
                 <div class="grid__9 footer__legal">
-                    Copyright IT Labs &copy; 2020 | Toate drepturile rezervate.
+                    Copyright IT Labs &copy; 2020 | Toate drepturile rezervate | <a href="gdpr.html" class="footer__link">Politica de confidentialitate</a> | 
+                    <a href="cookie-policy.html" class="footer__link">Politica de utilizare a cookie-urilor</a>
                 </div>
             </div>
         </div>
         <!--END ROW-->
     </footer>
+
+    <div class="cookie">
+        <div class="cookie__text">
+            Folosim cookie-uri pentru a-ți oferi cea mai bună experiență pe situl nostru. Poți afla mai multe despre cookie-uri
+            <a href="cookie-policy.html" class="cookie__link">aici</a>.
+        </div>
+        <div class="cookie__btn">Am inteles</div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
 </body>
