Added cookie section and gdpr, moved splide to imports

--- a/src/gdpr.html
+++ b/src/gdpr.html
@@ -14,7 +14,9 @@
 <body>
     <nav class="nav">
         <!-- LOGO -->
-        <img title="IT-Labs" src="img/logo.png" alt="IT-Labs Logo" class="nav__logo">
+        <a href="index.html" class="nav__logo">
+            <img title="IT-Labs" src="img/logo.png" alt="IT-Labs Logo">
+        </a>
 
         <!-- SEARCH compomemt -->
         <form class="search" action="" method="get">
@@ -238,7 +240,7 @@
                 B-dul G-ral. Gheorghe Magheru 28-30<br>
                 Sector 1, cod postal 010336<br>
                 Bucuresti, Romania<br>
-                www.dataprotection.ro<br>
+                <a href="www.dataprotection.ro">www.dataprotection.ro</a><br>
                 Dacă aveți o plângere cu privire încălcarea drepturilor Dumneavoastră, am prefera să ne contactați direct în primă instanță.<br>
                 Pentru orice întrebări suplimentare cu privire la modul în care datele cu caracter personal sunt prelucrate și pentru a vă exercita drepturile menționate mai sus, vă rugăm să ne scrieți la adresa de email: data.protection@it-labs.ro.
             </p>
