--- a/src/cookie-policy.html
+++ b/src/cookie-policy.html
@@ -14,7 +14,9 @@
 <body>
     <nav class="nav">
         <!-- LOGO -->
-        <img title="IT-Labs" src="img/logo.png" alt="IT-Labs Logo" class="nav__logo">
+        <a href="index.html" class="nav__logo">
+            <img title="IT-Labs" src="img/logo.png" alt="IT-Labs Logo">
+        </a>
 
         <!-- SEARCH compomemt -->
         <form class="search" action="" method="get">
