--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
 <body>
     <nav class="nav">
         <!-- LOGO -->
-        <img title="IT-Labs" src="img/logo.png" alt="IT-Labs Logo" class="nav__logo">
+        <a href="index.html" class="nav__logo">
+            <img title="IT-Labs" src="img/logo.png" alt="IT-Labs Logo">
+        </a>
 
         <!-- SEARCH compomemt -->
         <form class="search" action="" method="get">
@@ -774,15 +776,7 @@
         <!--END ROW-->
     </footer>
 
-    <div class="cookie">
-        <div class="cookie__text">
-            Folosim cookie-uri pentru a-ți oferi cea mai bună experiență pe situl nostru. Poți afla mai multe despre cookie-uri
-            <a href="cookie-policy.html" class="cookie__link">aici</a>.
-        </div>
-        <div class="cookie__btn">Am inteles</div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script> -->
 </body>
 
 </html>
