Created a cool button

--- a/src/index.html
+++ b/src/index.html
@@ -130,9 +130,12 @@
                     <!-- <span class="span span--main">A goal without a plan is just a wish</span> -->
                     <!-- <h1 class="heading-primary heading-primary--main">Cariera ta în <span>IT</span>.</h1> -->
                     <h1 class="heading-primary heading-primary--main">Laboratorul tau de <span>cariera</span></h1>
-                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam animi qui
+                    <!-- <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam animi qui
                         voluptates id iste. Dignissimos natus repudiandae exercitationem architecto. Illo vitae harum ex
-                        corrupti, modi sapiente cumque eius. Recusandae, laborum?</p>
+                        corrupti, modi sapiente cumque eius. Recusandae, laborum?</p> -->
+                    <a href="#" class="btn-update btn-update--tertiary">
+                        <div class="btn-update__text">cariera_ta</div>
+                    </a>
                 </div>
                 <div class="grid__6">
                     <img class="header__img" src="img/ilustr_crop.png" alt="">
