Created teams section

--- a/src/index.html
+++ b/src/index.html
@@ -181,7 +181,7 @@
                     <img src="./img/oracle-silver.png" alt="Oracle Silver Partner" class="responsive">
                 </div>
                 <div class="grid__8 partners__container">
-                    <p class="paragraph paragraph--grey partners__text">
+                    <p class="paragraph paragraph--large paragraph--grey partners__text">
                         Suntem parteneri Microsoft si Oracle pentru a oferi training de inalta calitate dar si pentru a oferi acces la resurse.
                     </p>
                 </div>
@@ -190,9 +190,19 @@
     </section>
 
 
-    <section class="u-vpadding">
+    <section class="team-section u-vpadding">
         <div class="row">
-            
+            <div class="grid">
+                <div class="grid__6 u-text-center team-section__text">
+                    <h2 class="heading-secondary heading-secondary--primary">Echipa IT-Labs te asteapta!</h2>
+                    <p class="paragraph paragraph--large paragraph--grey">
+                        Suntem o echipa tanara si dinamica. Trainerii nostrii sunt calificati CompTIA si fiecare trainer are peste 7 - 8 ani de experienta in domeniul sau de expertiza.
+                    </p>
+                </div>
+                <div class="grid__6 team-section__img">
+                    <img src="./img/echipa.jpg" alt="Echipa IT-Labs" class="responsive">
+                </div>
+            </div>
         </div>
     </section>
 
