Created new buttons, minor header layout change, cropped team image

--- a/src/index.html
+++ b/src/index.html
@@ -128,9 +128,10 @@
                 
                 <div class="grid__6">
                     <h1 class="heading-primary heading-primary--main">Laboratorul tau de <span>cariera</span></h1>
-                    <a href="#" class="btn-update btn-update--tertiary">
-                        <div class="btn-update__text">cariera_ta</div>
-                    </a>
+                    <div class="header__buttons">
+                        <a href="#" class="btn--filled btn--filled--tertiary">Update(cariera_ta);</a>
+                        <a href="#" class="btn--outline btn--outline--tertiary">Cursuri</a>
+                    </div>
                 </div>
                 <div class="grid__6">
                     <img class="header__img" src="img/circuits-tree.png" alt="">
