--- a/src/index.html
+++ b/src/index.html
@@ -156,33 +156,33 @@
         </div>
     </section>
 
-    <section class="features u-vpadding">
+    <section class="features-section u-vpadding">
         <div class="row row--respond">
             <h2 class="heading-secondary heading-secondary--secondary u-text-center">Beneficii</h2>
             <div class="grid grid--borders grid--borders--3 u-text-center">
-                <div class="grid__4 grid--borders__text"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
-                <div class="grid__4 grid--borders__text"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
-                <div class="grid__4 grid--borders__text"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
-                <div class="grid__4 grid--borders__text"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
-                <div class="grid__4 grid--borders__text"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
-                <div class="grid__4 grid--borders__text"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
-                <div class="grid__4 grid--borders__text"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
-                <div class="grid__4 grid--borders__text"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
-                <div class="grid__4 grid--borders__text"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
+                <div class="grid__4 features-section__outline"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
+                <div class="grid__4 features-section__outline"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
+                <div class="grid__4 features-section__outline"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
+                <div class="grid__4 features-section__outline"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
+                <div class="grid__4 features-section__outline"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
+                <div class="grid__4 features-section__outline"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
+                <div class="grid__4 features-section__outline"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
+                <div class="grid__4 features-section__outline"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
+                <div class="grid__4 features-section__outline"><p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quo ratione, quod expedita voluptate reiciendis doloribus repellendus</p></div>
             </div>
         </div>
     </section>
 
-    <section class="partners skew-down u-vpadding color-section--grey-light">
+    <section class="partners-section skew-down u-vpadding color-section--grey-light">
         <div class="row">
             <h2 class="heading-secondary heading-secondary--grey-dark">Parteneri</h2>
             <div class="grid">
-                <div class="grid__4">
+                <div class="grid__4 partners-section__images">
                     <img src="./img/microsoft-silver.png" alt="Microsoft Silver Partner" class="responsive">
                     <img src="./img/oracle-silver.png" alt="Oracle Silver Partner" class="responsive">
                 </div>
-                <div class="grid__8 partners__container">
-                    <p class="paragraph paragraph--large paragraph--grey partners__text">
+                <div class="grid__8 partners-section__container">
+                    <p class="paragraph paragraph--large paragraph--grey partners-section__text">
                         Suntem parteneri Microsoft si Oracle pentru a oferi training de inalta calitate dar si pentru a oferi acces la resurse.
                     </p>
                 </div>
